--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -706,7 +706,7 @@
 
   .service-card:hover {
     border: 2px solid #fff;
-    background: var(--button-color);
+    /* background: var(--button-color); */
     color: white;
   }
 
@@ -725,7 +725,44 @@
     background-color: #f5f5ff;
     padding-top: 20px;
 }
+.testimonialHeading{
+    font-weight: 700;
+    margin-bottom: 40px;
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: "Winky Rough", sans-serif;
+    }
 
+    .testimonialHeading::after {
+        content: "";
+        display: block;
+        width: 30%; 
+        height: 4px; 
+        background-color: var(--button-color); 
+        margin: 10px auto 0; 
+        border-radius: 5px; 
+    }
+
+@media (max-width:765px) {
+    .testimonialHeading{
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-align: center;
+    font-size: 2.5rem;
+    font-family: "Winky Rough", sans-serif;
+    }
+
+    .testimonialHeading::after {
+        content: "";
+        display: block;
+        width: 30%; 
+        height: 4px; 
+        background-color: var(--button-color); 
+        margin: 10px auto 0; 
+        border-radius: 5px; 
+    }
+
+}
 /* Contact Section */
 
 .contact-section {
@@ -895,10 +932,10 @@ footer {
 
 .scroll-to-top {
     position: fixed;
-    bottom: 120px;
-    right: 20px;
+    bottom: 140px;
+    right: 25px;
     background-color: gray;
-    color: #dfdbdb;
+    color: black;
     width: 40px;
     height: 40px;
     text-align: center;
@@ -924,37 +961,30 @@ footer {
 
 .whatsappButton {
     display: block;
-    /* Hide the button by default */
     position: fixed;
     bottom: 20px;
     right: 20px;
     background-color: #25d366;
-    /* WhatsApp green */
     color: #fff;
     text-decoration: none;
-    padding: 8px 10px;
+    padding: 8px 15px;
     border-radius: 50%;
     font-size: 24px;
     transition: background-color 0.3s, transform 0.3s;
     z-index: 99;
-    /* Ensure it's above other content */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Optional: Add shadow for better visibility */
     cursor: pointer;
-
 }
 
 .whatsappButton:hover {
     background-color: #128c7e;
-    /* Darker WhatsApp green on hover */
     transform: translateY(-3px);
-    /* Optional: Add a slight lift effect on hover */
 }
 
 /* chatbot============================= */
 #chatbot-container {
     position: fixed;
-    bottom: 20px;
+    bottom: 80px;
     right: 80px;
     z-index: 1;
 }
@@ -962,24 +992,20 @@ footer {
 /* Chatbot Icon */
 #chatbot-icon {
     display: block;
-    /* Hide the button by default */
     position: fixed;
-    bottom: 70px;
+    bottom: 80px;
     right: 20px;
-    background-color: var(--buttonColor);
+    background-color: var(--primary-color);
     color: #fff;
     text-decoration: none;
-    padding: 8px 10px;
+    padding: 8px 15px;
     border-radius: 50%;
-    font-size: 22px;
+    font-size: 20px ;
     transition: background-color 0.3s, transform 0.3s;
     z-index: 99;
-    /* Ensure it's above other content */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    /* Optional: Add shadow for better visibility */
     cursor: pointer;
     border: none;
-
 }
 
 /* Chatbot Dialog */
@@ -1000,8 +1026,7 @@ footer {
 
 /* Chatbot Header */
 #chatbot-header {
-    /* background-color: #007bff; */
-    background-color: var(--primaryColor);
+    background-color: var(--primary-color);
     color: #fff;
     display: flex;
     justify-content: space-between;
@@ -1054,7 +1079,7 @@ footer {
 
 #chatbot-send {
     /* background-color: #007bff; */
-    background-color: var(--primaryColor);
+    background-color: var(--primary-color);
     color: white;
     border: none;
     border-radius: 4px;
