upgraded css of both contact page and jobs page. added updated headers and footers

--- a/assets/css/jobs.css
+++ b/assets/css/jobs.css
@@ -1,8 +1,8 @@
 :root {
-    --primary-color: #6300B3;
-    --primary-hover: #6b21a8;
-    --text-color: #374151;
-    --text-light: #6b7280;
+    /* --primary-color: #6300B3; */
+    /* --primary-hover: #6b21a8; */
+    /* --text-color: #374151; */
+    /* --text-light: #6b7280; */
     --border-color: #e5e7eb;
     --background: #f9fafb;
     --white: #ffffff;
