--- a/assets/css/jobs.css
+++ b/assets/css/jobs.css
@@ -1,8 +1,4 @@
 :root {
-    /* --primary-color: #6300B3; */
-    /* --primary-hover: #6b21a8; */
-    /* --text-color: #374151; */
-    /* --text-light: #6b7280; */
     --border-color: #e5e7eb;
     --background: #f9fafb;
     --white: #ffffff;
@@ -142,9 +138,13 @@
     box-shadow: 0 25px 60px rgba(0, 0, 0, 0.25);
     z-index: 9999;
     width: 90%;
-    max-width: 600px;
+    max-width: 800px;
     max-height: 90vh;
     overflow-y: auto;
+  }
+
+  .modal-content{
+    width: 800px;
   }
   
   #jobDetailsModal .modal-content {
